# ClawWatch

./: README.md
clawwatch-plugin/: CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
clawwatch-plugin/clawwatch/: __init__.py  cli.py  event.py  hooks.py  loop_detector.py  plugin.py  risk.py  security.py  server.py  store.py
clawwatch-plugin/clawwatch.egg-info/: PKG-INFO  SOURCES.txt
clawwatch-plugin/clawwatch/static/: index.html
clawwatch-plugin/clawwatch/static/assets/: index--zSVQCcS.css  index-B07yFUtg.js  index-BJYrEZj5.js  index-BKsC878a.css  index-BkDnV-4L.js  index-BoJZMkdQ.css  index-Bq9k5YMZ.css  index-CKU-4ak4.js  index-CS94WrKG.js  index-DCd74JZl.js  index-F8Mr_qwi.css  index-Lgdu6tVU.js  index-ci78rLMi.css  index-yRTfhbvg.js
clawwatch-plugin/openclaw-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
clawwatch-plugin/tests/: test_security.py
clawwatch-ui/: UI_RULES.md  index.html  package-lock.json  package.json  vite.config.ts
clawwatch-ui/src/: App.tsx  agent-dashboard.css  index.css  sidebar.css
clawwatch-ui/src/components/: AgentPathMiniMap.tsx  InspectorPanel.tsx  Sidebar.tsx  TraceRow.tsx
clawwatch-ui/src/components/BrainGraph/: SystemTopology.css  SystemTopology.tsx
clawwatch-ui/src/lib/: api.ts  cost.ts  descriptions.ts  goalAlignment.ts  hallucination.ts  minimap.ts  risk.ts  timeline.ts  traceTree.ts  types.ts
clawwatch-ui/src/pages/: AgentDashboard.tsx  AgentList.tsx  CostDashboard.tsx  GlobalRisk.tsx  GlobalUsage.tsx  Overview.tsx  RiskReview.tsx  RunDetail.tsx  RunList.tsx  Security.tsx  ThreadDetail.tsx  ThreadList.tsx
